; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_policy.c_secpolicy_vnode_setattr.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_policy.c_secpolicy_vnode_setattr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.vattr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @secpolicy_vnode_setattr(i32* %0, %struct.inode* %1, %struct.vattr* %2, %struct.vattr* %3, i32 %4, i32 (i8*, i32, i32*)* %5, i8* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca %struct.inode*, align 8
  %10 = alloca %struct.vattr*, align 8
  %11 = alloca %struct.vattr*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32 (i8*, i32, i32*)*, align 8
  %14 = alloca i8*, align 8
  store i32* %0, i32** %8, align 8
  store %struct.inode* %1, %struct.inode** %9, align 8
  store %struct.vattr* %2, %struct.vattr** %10, align 8
  store %struct.vattr* %3, %struct.vattr** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 (i8*, i32, i32*)* %5, i32 (i8*, i32, i32*)** %13, align 8
  store i8* %6, i8** %14, align 8
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
